--- a/gameAuthenticationModule/views/dynamic.ejs
+++ b/gameAuthenticationModule/views/dynamic.ejs
@@ -52,7 +52,7 @@
                 , payload: JSON.stringify(sendObj)
                 , handler: function (response) {
                     console.log(response)
-                    window.postMessage(response, "*")
+                    window.parent.postMessage(response, "*")
                 }
             })
 
@@ -71,22 +71,23 @@
         }
 
 
-        window.addEventListener("message", receiveMessage, false);
+        // window.addEventListener("message", receiveMessage, false);
 
-        function receiveMessage(evt) {
-            console.log(evt)
-            if (event.origin !== "localhost:3000")
-                return;
+        // function receiveMessage(evt) {
+        //     console.log(evt)
+        //     if (event.origin !== "localhost:3000") {
+        //         return;
+        //     }
 
-            // ...
-        }
+        //     // ...
+        // }
     // document.getElementById('login').submit(function(evt){
     //   evt.preventDefault()
     //   alert("Submit")
     // })
     </script>
-    <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
-    <script src='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js'></script>
+    <!-- <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script> -->
+    <!-- <script src='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js'></script> -->
 </body>
 
 </html>
