Complete wallet major features

--- a/sampleGameProvider/views/gamePage.ejs
+++ b/sampleGameProvider/views/gamePage.ejs
@@ -47,6 +47,10 @@
                                     <th scope="row">Role:</th>
                                     <td comp-role="role">Admin</td>
                                 </tr>
+                                <tr>
+                                    <th scope="row">Token:</th>
+                                    <td comp-role="token">Admin</td>
+                                </tr>
                             </tbody>
                         </table>
                     </div>
