--- a/sampleGameProvider/views/gamePage.ejs
+++ b/sampleGameProvider/views/gamePage.ejs
@@ -13,63 +13,16 @@
 
 <body>
     <h1>This is GamePage in sampleGameProvider</h1>
-    <gameUser>
-        <div class="list-group-item object-div" style="border: none; " data-status="approved">
-            <div class="container">
-                <div class="row">
-                    <div class="col-3" style="margin: auto">
-                        <div class="image-container"
-                            style="width: 193px; max-width: 256px; height: auto; max-height: 192px;">
-                            <img alt="" style="width: 100%; height: auto;" comp-role="avatar"
-                                src="https://rawgit.com/PhanHoangAnh/CreateDynamicAttributeSets/master/materials/sample.jpg">
 
-                        </div>
-                    </div>
-                    <div class="col" style="margin: auto;">
-                        <p class="h4 mb-4 contract-title"><span comp-role="lastname">Adam Smith</span>&nbsp;<span
-                                comp-role="firstname"></span></p>
-
-                        <table class="table">
-                            <tbody>
-                                <tr>
-                                    <th scope="row">Nickname:</th>
-                                    <td comp-role="username">Mark</td>
-                                </tr>
-                                <tr>
-                                    <th scope="row">Balance:</th>
-                                    <td comp-role="balance">$ 2354254</td>
-                                </tr>
-                                <tr>
-                                    <th scope="row">Phone:</th>
-                                    <td comp-role="phone">965823541</td>
-                                </tr>
-                                <tr>
-                                    <th scope="row">Role:</th>
-                                    <td comp-role="role">Admin</td>
-                                </tr>
-                                <tr>
-                                    <th scope="row">Token:</th>
-                                    <td comp-role="token">Admin</td>
-                                </tr>
-                            </tbody>
-                        </table>
-                    </div>
-                    <div class="col-2 btn-options" style="margin: auto;">
-                        <button class="btn btn-default btn-sm waves-effect waves-light" comp-id="btn-edit">Edit</button>
-                        <!-- <button class="btn btn-secondary btn-sm" id="btn-complete">Complete</button> -->
-                    </div>
-                </div>
-            </div>
-
-        </div>
-    </gameUser>
-
+    <%- include('gamePartial')%>
 
     <script src="/mdbootstrap/js/jquery.min.js"></script>
     <script src="/mdbootstrap/js/popper.min.js"></script>
     <script src="/mdbootstrap/js/bootstrap.min.js"></script>
     <script src="/mdbootstrap/js/mdb.min.js"></script>
     <script>
+
+        var aliasJWT, userId;
 
         if (window.self == window.top) {
             // get JWT1 from storage
@@ -85,12 +38,13 @@
                 //     return;
                 // }
                 // 1. get aliasJWT1 from parent windows
-                let aliasJWT = JSON.parse(evt.data)['accessToken']
+                aliasJWT = this.aliasJWT = JSON.parse(evt.data)['accessToken']
                 console.log(aliasJWT)
                 // 2. sen back aliasJWT1 to sampleGameProvider to exchange real JWT1 and userInformation
                 sendObj = {
                     aliasJWT: aliasJWT
                 }
+                // End poit at post localhost:3002//alias
                 console.log('alias', aliasJWT)
                 doAjax({
                     url: '/aliasjwt'
@@ -98,9 +52,7 @@
                     , payload: JSON.stringify(sendObj)
                     , handler: function (response) {
                         updateUserInfo(JSON.parse(response))
-
-                        console.log(response)
-                        // Update UserInfor here
+                        userId = JSON.parse(response)["userId"]
                     }
                 })
             }
@@ -132,12 +84,44 @@
 
                 }
                 if (key == 'avatar') {
-                    user.querySelector(`[comp-role="avatar"]`).src = "https://localhost:3000"+value
+                    user.querySelector(`[comp-role="avatar"]`).src = "https://localhost:3000" + value
                     // console.log(tempContent.querySelector(`[comp-role="avatar"]`))
                 }
             }
 
         }
+
+        function updateBalance() {
+            console.log(aliasJWT)
+        }
+        var editBnt = document.querySelector('[comp-id="btn-edit"]')
+        // console.log(editBnt)
+        editBnt.addEventListener('click', evt => {
+            console.log('aliasJWT', aliasJWT, userId)
+
+
+            sendObj = {
+                aliasJWT: aliasJWT,
+                sourceAddress: userId,
+                destAddress: 0,
+                value: 100
+            }
+            // End poit at post localhost:3002//alias
+            console.log('sendObj', sendObj)
+            doAjax({
+                url: '/updateToken'
+                , contentType: "application/json"
+                , payload: JSON.stringify(sendObj)
+                , handler: function (response) {
+                    console.log(response)
+                    // 
+                    console.log(JSON.parse(response)["tokenBalance"])
+                    // Update UserInfor here
+                    tokenElem = document.querySelector('[comp-role="token"]')
+                    tokenElem.innerHTML = `${JSON.parse(response)["tokenBalance"]} $$ Token`
+                }
+            })
+        })
 
     </script>
 </body>
