--- a/gameAuthenticationModule/views/GamePortal/gamePortal.ejs
+++ b/gameAuthenticationModule/views/GamePortal/gamePortal.ejs
@@ -19,7 +19,7 @@
         <a href = "/portal/real">Go to Real Game</a>
     </p>
     <hr>
-    <iframe src=http://localhost:3002/game style="
+    <iframe src=<%=GAME_ADDRESS%> style="
     width: 100%;
     height: 800px;
     border: gray solid;"></iframe>
