--- a/generalSSO_mimic/views/result.ejs
+++ b/generalSSO_mimic/views/result.ejs
@@ -5,6 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link href="/mdbootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <link href="/mdbootstrap/css/mdb.min.css" rel="stylesheet">
+    <link href="/mdbootstrap/css/style.css" rel="stylesheet">
 </head>
 
 <body>
@@ -20,11 +23,48 @@
         <%= user.phone%>
         <br>
         <%= user.role%>
-        
-        
+
+
     </header>
+    <!-- <modal> -->
+    <modal class="modal fade" id="userEditor" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle"
+        aria-hidden="true">
+
+        <!-- Add .modal-dialog-centered to .modal-dialog to vertically center the modal -->
+        <div class="modal-dialog modal-dialog-centered modal-lg" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="exampleModalLongTitle">Edit User Info</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <%- include("./partials/editform")  %>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                    <button type="button" class="btn btn-primary" id="saveChangeBnt">Save changes</button>
+                </div>
+            </div>
+        </div>
+    </modal>
+    <!-- </modal> -->
+
+    <template>
+        <%- include('./partials/userdetail')%>
+    </template>
+    <div class="container" id="container">
+        <!--  -->
+
+    </div>
+
+    <script src="/mdbootstrap/js/jquery.min.js"></script>
+    <script src="/mdbootstrap/js/popper.min.js"></script>
+    <script src="/mdbootstrap/js/bootstrap.min.js"></script>
+    <script src="/mdbootstrap/js/mdb.min.js"></script>
     <script>
-        token = <%-token %>
+        token = <%- token %>
             console.log(token)
         this.postMessage(token, "*")
 
@@ -37,6 +77,131 @@
 
             // ...
         }
+    </script>
+    <script>
+        let user = <%- user %>;
+        console.log('user', user)
+        for (const [key, value] of Object.entries(user)) {
+            tempContent = document.querySelector('template').content
+
+            if (tempContent.querySelector(`[comp-role="${key}"]`) && key !== "avatar") {
+                tempContent.querySelector(`[comp-role="${key}"]`).innerHTML = value;
+                // console.log(tempContent.querySelector(`[comp-role="${key}"]`))
+
+            }
+            if (key == 'avatar') {
+                tempContent.querySelector(`[comp-role="avatar"]`).src = value
+                // console.log(tempContent.querySelector(`[comp-role="avatar"]`))
+            }
+        }
+        container.appendChild(document.importNode(tempContent, true));
+        lastElementChild = container.lastElementChild
+        lastElementChild.C_DATA = user
+        lastElementChild.setAttribute('c-data', true)
+
+        modal = document.querySelector('modal');
+
+        editBnt = lastElementChild.querySelector('[comp-id="btn-edit"]')
+
+        editBnt.addEventListener('click', (evt) => {
+                let handler = evt.target.closest('[c-data="true"]')
+                modal.handler = handler
+
+                let C_DATA = handler.C_DATA
+                console.log(C_DATA)
+                $("modal").modal("show");
+                modal.C_DATA = Object.assign({}, C_DATA)
+                for (const [key, value] of Object.entries(C_DATA)) {
+                    // console.log(modal.querySelector(`[c-type="${key}"]`))
+                    if (modal.querySelector(`[c-type="${key}"]`) && key !== "avatar") {
+                        modal.querySelector(`[c-type="${key}"]`).value = value;
+                    }
+                    if (key == "avatar") {
+
+                    }
+                }
+
+            })
+
+            // 
+            let c_types = modal.querySelectorAll('[c-type]')
+        c_types.forEach(function (ele) {
+            ele.addEventListener('change', function (evt) {
+                // console.log(modal.handler, this.getAttribute('c-type'))
+                // Wait
+                modal.C_DATA[this.getAttribute('c-type')] = this.value;
+                console.log(modal.C_DATA)
+            })
+        })
+        // ///////////////////////////////////////
+        cropper = document.querySelector('cropper-wc')
+        cropper.addEventListener('CROPPED', (evt) => {
+            // if(modal.C_DATA){
+            //     modal.C_DATA.avatar = evt.detail['image']
+            //     check = evt.detail['image'].replace(/^data:image\/png;base64,/, "")
+
+            //     console.log(isBase64(check))
+            // }
+            // function isBase64(str) {
+            // if (str ==='' || str.trim() ===''){ return false; }
+            // try {
+            //     return btoa(atob(str)) == str;
+            // } catch (err) {
+            //     return false;
+            // }
+        // }
+            
+            // console.log('here', user.avatar)
+        })
+        // ///////////////////////////////////////
+        saveChangeBnt.addEventListener('click', evt => {
+            console.log('bnt ready')
+            let C_DATA = modal.C_DATA
+            modal.handler.C_DATA = Object.assign({}, modal.C_DATA)
+            for (const [key, value] of Object.entries(C_DATA)) {
+                // console.log(`${key}: ${value}`);
+                tempContent = modal.handler
+
+                if (tempContent.querySelector(`[comp-role="${key}"]`) && key !== "avatar") {
+                    tempContent.querySelector(`[comp-role="${key}"]`).innerHTML = value;
+                    // console.log(tempContent.querySelector(`[comp-role="${key}"]`))
+
+                }
+                if (key == 'avatar') {
+                    tempContent.querySelector(`[comp-role="avatar"]`).src = value
+                    // console.log(tempContent.querySelector(`[comp-role="avatar"]`))
+                }
+
+            }
+
+            // post the chagging to server
+            console.log(evt)
+            sendObj = C_DATA
+            console.log('send obj', sendObj)
+            doAjax({
+                url: '/reg/updateuser'
+                , contentType: "application/json"
+                , payload: JSON.stringify(sendObj)
+                , handler: function (response) {
+                    console.log(response)
+                    window.parent.postMessage(response, "*")
+                }
+            })
+
+        })
+
+        function doAjax(request) {
+            var ajax = new XMLHttpRequest();
+            ajax.open("POST", request.url, false)
+            ajax.setRequestHeader("Content-type", request.contentType)
+            ajax.onreadystatechange = function () {
+                if (ajax.readyState == 4) {
+                    request.handler.call(request, ajax.responseText)
+                }
+            }
+            ajax.send(request.payload)
+        }
+
     </script>
 </body>
 
